--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
 
         <img alt=""  class="car_end" src="https://cdn.discordapp.com/attachments/1030727815689150504/1030791934203146250/b7e3a7a7f6f39957.png">
         <img alt=""  id="garage" class="garageEnd" src="img/page1/garagedA.png">
-        <img alt="" id="driver3" class="driver_walk_03" src="https://media.discordapp.net/attachments/1030727815689150504/1030793197267468358/01.png?width=476&height=676" > 
-        <img alt="" id="driver4" class="driver_walk_04" src="https://media.discordapp.net/attachments/1030727815689150504/1031147309163094106/03.png?width=476&height=676">  
+        <!-- <img alt="" id="driver3" class="driver_walk_03" src="https://media.discordapp.net/attachments/1030727815689150504/1030793197267468358/01.png?width=476&height=676" > 
+        <img alt="" id="driver4" class="driver_walk_04" src="https://media.discordapp.net/attachments/1030727815689150504/1031147309163094106/03.png?width=476&height=676">   -->
         <div class="textEnd">
             <h3>พ.ศ. 2520 กิจการรถเมล์<br>นายเลิศได้ปิดตัวลง</h3>
             <p>รัฐบาลมีนโยบายรวมกิจการรถเมล์ทุกสาย<br>
